[gd_scene load_steps=3 format=3 uid="uid://dt65kcmm087t4"]

[ext_resource type="Script" uid="uid://blsx0an1fvjc3" path="res://addons/reaction/components/ReactionUIItemList.gd" id="1_w530k"]

[sub_resource type="DPITexture" id="DPITexture_0fhaw"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#ff5d5d\" d=\"M2 1v8.586l1.293-1.293a1 1 0 0 1 1.414 0L7 10.587l2.293-2.293a1 1 0 0 1 1.414 0L13 10.586l1-1V6H9V1H2zm8 0v4h4zm-6 9.414-2 2V15h12v-2.586l-.293.293a1 1 0 0 1-1.414 0L10 10.414l-2.293 2.293a1 1 0 0 1-1.414 0L4 10.414z\"/></svg>
"

[node name="ReactionUIItemList" type="VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
script = ExtResource("1_w530k")
item_name = "fact"

[node name="ItemLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Facts:"

[node name="SearchFilterContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ItemSearcher" type="LineEdit" parent="SearchFilterContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search by Fact's name"

[node name="TagFilterButton" type="Button" parent="SearchFilterContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Fiilter by Tags"
icon = SubResource("DPITexture_0fhaw")
flat = true

[node name="ClearFilterButton" type="Button" parent="SearchFilterContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Clear filters"
icon = SubResource("DPITexture_0fhaw")
flat = true

[node name="FilterInformationLabel" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.596078, 0.596078, 0.596078, 1)
theme_override_font_sizes/font_size = 14
text = "No filter activated"
autowrap_mode = 1

[node name="ItemList" type="ItemList" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
item_count = 5
item_0/text = "VITALITY"
item_1/text = "oldManAttitudeTowardsYou"
item_2/text = "CHARISMA"
item_3/text = "talkedWithOldMan"
item_4/text = "INTELLIGENCE"

[node name="ButtonsContainer" type="GridContainer" parent="."]
layout_mode = 2
theme_override_constants/h_separation = 5
columns = 2

[node name="AddItemMenuButton" type="MenuButton" parent="ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Add Fact"

[node name="RemoveItemButton" type="Button" parent="ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Remove Fact"

[node name="FilterAcceptDialog" type="AcceptDialog" parent="."]
unique_name_in_owner = true
title = "Tag filter"
size = Vector2i(300, 450)

[node name="TagFilterItemList" type="ItemList" parent="FilterAcceptDialog"]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 40.0
select_mode = 1

[node name="WarningAcceptDialog" type="AcceptDialog" parent="."]
unique_name_in_owner = true

[connection signal="text_submitted" from="SearchFilterContainer/ItemSearcher" to="." method="_on_item_searcher_text_submitted"]
[connection signal="pressed" from="SearchFilterContainer/TagFilterButton" to="." method="_on_tag_filter_button_pressed"]
[connection signal="pressed" from="SearchFilterContainer/ClearFilterButton" to="." method="_on_clear_filter_button_pressed"]
[connection signal="item_selected" from="ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="pressed" from="ButtonsContainer/RemoveItemButton" to="." method="_on_remove_item_button_pressed"]
[connection signal="confirmed" from="FilterAcceptDialog" to="." method="_on_filter_accept_dialog_confirmed"]
